# bioinformatics-rosalind

./: .bio_state.json  README.md  pyproject.toml
notebooks/: playground.ipynb
solutions/ba01a/: __main__.py
solutions/ba01c/: rosalind_ba1c.txt
solutions/ba01d/: __main__.py  rosalind_ba1d.txt
solutions/ba01f/: rosalind_ba1f.txt
solutions/ba1/ba1a/: __main__.py  rosalind_ba1a.txt
solutions/ba1/ba1b/: __main__.py  rosalind_ba1b.txt
solutions/ba1/ba1c/: __main__.py
solutions/ba1/ba1d/: __main__.py
solutions/ba1/ba1e/: __main__.py  rosalind_ba1e.txt
solutions/ba1/ba1f/: __main__.py
solutions/ba1/ba1g/: __main__.py  rosalind_ba1g.txt
solutions/ba1/ba1h/: __main__.py
solutions/ba1/ba1i/: __main__.py  rosalind_ba1i.txt
solutions/ba1/ba1j/: __main__.py  rosalind_ba1j.txt
solutions/ba1/ba1k/: __main__.py  rosalind_ba1k.txt
solutions/ba1/ba1l/: __main__.py  rosalind_ba1l.txt
solutions/ba1/ba1m/: __main__.py  rosalind_ba1m.txt
solutions/ba1/ba1n/: __main__.py  rosalind_ba1n.txt
solutions/ba1h/: rosalind_ba1h.txt
solutions/ba1i/: __main__.py  rosalind_ba1i.txt
solutions/ba2/ba2a/: __main__.py  rosalind_ba2a.txt
solutions/ba2/ba2b/: __main__.py  rosalind_ba2b.txt
solutions/ba2/ba2c/: __main__.py  rosalind_ba2c.txt
solutions/ba2/ba2d/: __main__.py  rosalind_ba2d.txt
solutions/ba2/ba2e/: __main__.py  rosalind_ba2e.txt
solutions/ba2/ba2f/: __main__.py  rosalind_ba2f.txt
solutions/ba2/ba2g/: __main__.py  rosalind_ba2g.txt
src/bio/: cli.py  core.py  motifs.py  newspaper.py  strings.py  utils.py
utils/: __init__.py
(+26 files in other folders)
